# LeetPINN

./: README.md  _probe.py
physicsnemo/: .gitignore  .importlinter  .markdownlint.yaml  .markdownlintignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.MD  CONTRIBUTING.md  Dockerfile  FAQ.md  Makefile  README.md  asv.conf.json  greptile.json  pyproject.toml  v2.0-MIGRATION-GUIDE.md
physicsnemo/CODING_STANDARDS/: EXTERNAL_IMPORTS.md  FUNCTIONAL_APIS.md  MODELS_IMPLEMENTATION.md
physicsnemo/benchmarks/: README.md  __init__.py  run_benchmarks.sh
physicsnemo/benchmarks/physicsnemo/nn/: README.md
physicsnemo/docs/: api_diffusion.rst  api_index.rst  api_models.rst  conf.py  examples_weather.rst
physicsnemo/docs/api/: physicsnemo.active_learning.rst  physicsnemo.core.rst  physicsnemo.domain_parallel.rst  physicsnemo.nn.functionals.rst  physicsnemo.nn.layers.rst  physicsnemo.nn.rst  physicsnemo.optim.rst  physicsnemo.sym.rst  physicsnemo.utils.rst
physicsnemo/docs/api/datapipes/: physicsnemo.datapipes.benchmarks.rst  physicsnemo.datapipes.cae.rst  physicsnemo.datapipes.climate.rst  physicsnemo.datapipes.gnn.rst  physicsnemo.datapipes.readers.rst  physicsnemo.datapipes.rst  physicsnemo.datapipes.transforms.rst
physicsnemo/docs/api/diffusion/: introduction.rst  metrics.rst  models.rst  multi_diffusion.rst  noise_schedulers.rst  preconditioners.rst  samplers.rst  utils.rst
physicsnemo/docs/api/mesh/: boundaries.rst  calculus.rst  core.rst  curvature.rst  geometry.rst  index.rst  io.rst  neighbors.rst  remeshing.rst  repair.rst  sampling.rst  smoothing.rst  spatial.rst  subdivision.rst  tessellation.rst  transformations.rst  validation.rst  visualization.rst
physicsnemo/docs/api/models/: diffusion_unets.rst  dit.rst  modules.rst  operators.rst  transolver.rst  weather.rst
physicsnemo/docs/img/mesh/: airplane.py  airplane_gaussian_curvature.py  airplane_mean_curvature.py
physicsnemo/examples/: .markdownlint.yaml  README.md  dgl_to_pyg_migration.md
physicsnemo/examples/active_learning/active_learning_aero/: README.md
physicsnemo/examples/active_learning/moons/: .gitignore  README.md  moon_data.py  moon_example.py  moon_strategies.py
physicsnemo/examples/additive_manufacturing/sintering_physics/: README.md  graph_dataset.py  inference.py  reading_utils.py  render_rollout.py  (+3 more)
physicsnemo/examples/multi_storage_client/: msc_config.yaml  requirements.txt
physicsnemo/physicsnemo/: __init__.py
physicsnemo/physicsnemo/active_learning/: loop.py
physicsnemo/physicsnemo/compat/: __init__.py
physicsnemo/physicsnemo/core/: function_spec.py  module.py  version_check.py
physicsnemo/physicsnemo/datapipes/: RNG.md  __init__.py  _rng.py  dataloader.py  datapipes.md  dataset.py  mesh_dataset.py  multi_dataset.py  protocols.py
physicsnemo/physicsnemo/diffusion/: __init__.py  base.py
physicsnemo/physicsnemo/domain_parallel/: __init__.py
physicsnemo/physicsnemo/mesh/: README.md  __init__.py  _mesh_spec.py  domain_mesh.py  fields.py
physicsnemo/physicsnemo/nn/: __init__.py
physicsnemo/physicsnemo/optim/: __init__.py  muon.py
physicsnemo/physicsnemo/sym/: __init__.py  computation.py  constants.py  graph.py
physicsnemo/physicsnemo/utils/: __init__.py  checkpoint.py  zenith_angle.py
physicsnemo/test/: conftest.py  coverage.docstring.rc  coverage.pytest.rc  get_coverage.sh  pytest_utils.py  test_multi_gpu_sample.py
physicsnemo/test/active_learning/: conftest.py  test_checkpointing.py  test_config.py  test_driver.py  test_loop.py  test_registry.py
physicsnemo/test/ci_tests/: check_docstring_coverage.py  header_check.py  interrogate_baseline.txt  prevent_untracked_imports.py
physicsnemo/test/common/: __init__.py  checkpoints.py  fwdaccuracy.py  inference.py  optimization.py  utils.py
physicsnemo/test/compat/: test_compat.py
physicsnemo/test/core/: test_filesystem.py  test_from_torch.py  test_function_spec.py  test_model_factory.py  test_module_nested.py  test_registry.py  test_version_check.py
physicsnemo/test/datapipes/: test_ahmed_body.py  test_bsms.py  test_climate.py  test_darcy.py  test_domino_datapipe.py  test_drivaernet.py  test_healpix.py  test_healpix_couple.py  test_hydrographnet.py  test_kelvin_helmholtz.py  test_lagrangian.py  test_mesh_datapipe.py  test_stokes.py  test_synthetic.py  test_vortex_shedding.py
physicsnemo/test/diffusion/: conftest.py  helpers.py  test_domain_parallel_preconditioner.py  test_domain_parallel_sampling.py  test_dps_guidance.py  test_losses.py  test_multi_diffusion_dps_guidance.py  test_multi_diffusion_losses.py  test_multi_diffusion_models.py  test_multi_diffusion_predictor.py  test_multi_diffusion_sampling.py  test_noise_schedulers.py  test_patching.py  test_preconditioners.py  test_samplers.py  test_solvers.py  test_wrappers.py
physicsnemo/test/distributed/: test_autograd.py  test_config.py  test_distributed_fft.py  test_manager.py  test_mesh.py  test_utils.py
physicsnemo/test/domain_parallel/: conftest.py  test_function_registration.py  test_grad_sharding.py  test_initialization.py  test_redistribute.py  test_reductions.py
physicsnemo/test/mesh/: __init__.py  conftest.py  test_domain_mesh_transforms.py  test_fields.py  test_graph_extraction.py  test_mesh_spec.py
physicsnemo/test/metrics/: test_graphcast_loss.py  test_healpix_loss.py  test_loss_climate.py  test_metrics_cfd.py  test_metrics_climate.py  test_metrics_general.py  test_metrics_integral.py
physicsnemo/test/models/: conftest.py  test_distributed_graph.py  test_entrypoints.py  test_from_checkpoint.py  test_instantiate_backward_compatibility.py  test_kwargs_model.py
physicsnemo/test/optim/: test_combined_optimizer.py  test_muon.py
physicsnemo/test/plugins/: distributed_fixtures.py  distributed_print.py
physicsnemo/test/sym/: test_gradients.py  test_phy_informer.py
physicsnemo/test/utils/: msc_config_checkpoint.yaml  msc_config_public_read.yaml  test_capture.py  test_checkpoint.py  test_checkpoint_distributed.py  test_graph_partitioning.py  test_mesh_utils.py  test_msc_public_read.py  test_profiler.py  test_zenith_angle.py
(+2641 files in other folders)
